--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -123,8 +123,7 @@ font-weight: 400;
 font-size: 16px;
 color: #9B9B9B;
 }
-.block-content-text {
-}
+
 .block-content-form {
 margin-top: 32px;
 margin-right: 32px;
@@ -171,18 +170,6 @@ h4 {
 }
 
 .form_button {
-/*font-family: 'Onest', sans-serif;
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 20px;
-color: #fff;
-background: #383838;
-border-radius: 12px;
-width: 108px;
-height: 44px;
-margin: 56px 40px 0 0;*/
-
 font-family: 'Onest', sans-serif;
 font-style: normal;
 font-weight: 400;
@@ -206,7 +193,7 @@ margin-top: 56px;
 	color: #fff;
 	background: grey;
 	cursor: pointer;
-	transition: all 0.3s ease-out;
+	transition: all 0.4s ease-out;
 
 }
 .block-content-form_button-back:hover{
@@ -332,13 +319,14 @@ a{
 }
 
 .form-hidden {
-/*visibility: hidden;*/
 display: none;
 }
 
 .active{
 display: block;
-animation-duration: 1.5s;
-animation-fill-mode: both;
-animation-name: fadeIn;
+animation: 1.8s shows ease;
+}
+@keyframes shows {
+  from { opacity: 0.2; }
+  to { opacity: 1; }
 }
